# starline

./: .gitignore  README.md  README_en.md  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml
apps/desktop-ui/: index.html  package.json  tsconfig.json
apps/desktop-ui/scripts/: prepare-release-runtime.mjs
apps/desktop-ui/src/: App.tsx  main.tsx
apps/desktop-ui/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop-ui/src-tauri/resources/local-api/: index.cjs
apps/desktop-ui/src-tauri/resources/migrations/: 0009_curious_moondragon.sql  0012_sudden_jamie_braddock.sql  0013_fair_lorna_dane.sql
apps/desktop-ui/src-tauri/resources/migrations/meta/: 0000_snapshot.json  0001_snapshot.json  0003_snapshot.json  0004_snapshot.json  0005_snapshot.json  0007_snapshot.json  0008_snapshot.json  0011_snapshot.json  _journal.json
apps/desktop-ui/src-tauri/src/: main.rs
apps/desktop-ui/src/components/: AppNav.tsx  AssetFilters.tsx  AssetImportForm.tsx  AssetList.tsx  ProjectCard.tsx  ProjectCreateModal.tsx  ProjectList.tsx
apps/desktop-ui/src/hooks/: useAgent.ts  useAgentProviders.ts  useAnalytics.ts  useAsset.ts  useAssets.ts  useConnectors.ts  useImportAsset.ts  useProject.ts  useProjects.ts
apps/local-api/: package.json  tsconfig.json
apps/local-api/src/: connectors.runtime.ts  index.ts  server.ts
docs/: agent-query-mvp.md  analytics-aggregation-mvp.md  analytics-api-mvp.md  analytics-dashboard-mvp.md  analytics-events-mvp.md  mvp-acceptance-report.md  quickstart.md  v1.0.0-release-notes.md  windows-manual-validation-checklist.md
(+34 files in other folders)
