[package]
name = "starline-desktop-shell"
version = "0.1.0"
description = "StarLine desktop shell"
authors = ["hana2262"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }

[features]
custom-protocol = ["tauri/custom-protocol"]
